# web

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml  railway.worker.toml
.github/workflows/: ci.yml
docs/: database-objects.md  deploy-railway.md  load-test.md  runbook.md
docs/adr/: 0001-postgres-as-queue.md  0002-advisory-lock-key-derivation.md  0003-one-transaction-per-event.md  0004-ordering-only-binds-state-setting-effects.md  0005-full-jitter-and-earned-retries.md  0006-superseded-attempt-outcome.md  0007-accept-and-queue-ingestion.md  0008-idempotent-effect-via-unique-keyed-ledger.md  0009-the-worker-waits-out-its-database.md
infra/: README.md  alb.tf  database.tf  ecs.tf  main.tf  network.tf  outputs.tf  variables.tf
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_widen_account_version.py  0003_operational_views_and_guards.py
scripts/: send_webhook.py  verify_load.py
src/webhook_receiver/: config.py
src/webhook_receiver/adapters/: database.py  dlq.py  failures.py  ledger.py  locks.py  orm.py  query.py  queue.py
src/webhook_receiver/api/: admin.py  app.py  auth.py  metrics.py  middleware.py  state.py  webhooks.py
src/webhook_receiver/domain/: balance.py  dlq.py  effects.py  enums.py  errors.py  events.py  handlers.py
src/webhook_receiver/obs/: metrics.py
src/webhook_receiver/services/: process.py  replay.py
src/webhook_receiver/worker/: main.py
tests/integration/: conftest.py  test_admin.py  test_db_objects.py  test_ingestion.py  test_migrations.py  test_processing.py  test_resilience.py  test_worker_startup.py
tests/load/: locustfile.py
tests/load/results/: concurrency_sweep.csv  load_stats.csv
tests/unit/: test_config.py  test_failures.py  test_handlers.py  test_ingestion_endpoint.py  test_locks.py  test_middleware.py  test_schema_invariants.py  test_worker_loop.py
