[project]
name = "webhook-receiver"
version = "0.1.0"
description = "Idempotent webhook receiver: at-least-once delivery, exactly-once effects."
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "structlog>=24.4",
    "prometheus-client>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "testcontainers[postgres]>=4.8",
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "ruff>=0.8",
    "mypy>=1.13",
    "locust>=2.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/webhook_receiver"]

# --- Lint / format -----------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "N",         # pep8-naming
    "UP",        # pyupgrade
    "B",         # flake8-bugbear
    "C4",        # flake8-comprehensions
    "DTZ",       # flake8-datetimez -- forbids naive datetimes
    "T20",       # flake8-print -- no stray print()
    "SIM",       # flake8-simplify
    "RUF",       # ruff-specific
    "ASYNC",     # flake8-async
    "S",         # flake8-bandit
    "BLE",       # flake8-blind-except -- SPEC 6.6: no bare except
    "TRY",       # tryceratops
    "ARG",       # unused arguments
    "PTH",       # use pathlib
]
ignore = [
    "TRY003",  # long messages outside exception class: we want them
]

[tool.ruff.lint.per-file-ignores]
# Tests assert; tests may hardcode credentials and use randomness.
"tests/**" = ["S101", "S105", "S106", "S311", "ARG001", "ARG002"]
# Alembic generates its own conventions.
"migrations/**" = ["N999", "ARG001"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Header", "fastapi.Path"]

# --- Types -------------------------------------------------------------------

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]
warn_unreachable = true
warn_unused_ignores = true
disallow_any_explicit = true
disallow_any_generics = true
show_error_codes = true

[[tool.mypy.overrides]]
# Alembic ships partial stubs; its generated env.py is not strictly typeable.
module = ["alembic.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# testcontainers has no type information published.
module = ["testcontainers.*"]
ignore_missing_imports = true

# --- Tests -------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "integration: requires a real Postgres via Testcontainers (needs a Docker daemon)",
]

[tool.coverage.run]
branch = true
source = ["src/webhook_receiver/domain", "src/webhook_receiver/services"]

[tool.coverage.report]
# SPEC 6.10: coverage stays at or above 85% on domain/ and services/.
fail_under = 85
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]
